gitops/30-namespace-vaultwarden.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden-talos
  annotations:
    argocd.argoproj.io/sync-wave: "0"
