gitops/34-vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-http
  namespace: vaultwarden-talos
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
